--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <title>Braxton Orban</title>
+  </head>
+  <body>
+    <h1>Pardon our dust! This website is still a work in progress.</h1>
+  </body>
+</html>
