icon & to-do list

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>Braxton Orban</title>
+    <link rel="icon" type="image/x-icon" href="images/icon.gif">
   </head>
   <body>
     <h1>Pardon our dust! This website is still a work in progress.</h1>
+
+    <h3>To-do List</h3>
+    <ul>
+      <li>Plan overall layout</li>
+      <li>Add photos</li>
+      <li>Add links to things</li>
+      <li>Write about section</li>
+      <li>Look at other github pages for inspiration</li>
+    </ul>
+
   </body>
 </html>
