--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Braxton Orban</title>
     <link rel="icon" type="image/x-icon" href="images/icon.gif">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <h1>Pardon our dust! This website is still a work in progress.</h1>
+    <p>but you can still email me at <strong>borban@umich.edu</strong>.</p>
 
-    <h3>To-do List</h3>
+    <h2>To-do List</h2>
     <ul>
       <li>Plan overall layout</li>
       <li>Add photos</li>
@@ -17,6 +19,5 @@
       <li>Write about section</li>
       <li>Look at other github pages for inspiration</li>
     </ul>
-
   </body>
 </html>
