--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Braxton Orban</title>
+    <title>&laquo; braxton orban &raquo;</title>
     <link rel="icon" type="image/x-icon" href="images/icon.gif">
     <link rel="stylesheet" href="styles/style.css" />
   </head>
@@ -19,5 +19,9 @@
       <li>Write about section</li>
       <li>Look at other github pages for inspiration</li>
     </ul>
+
+    <p>wanna have an awesome website like me? i learned how to make it from this tutorial
+      <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web">here.</a>
+    </p>
   </body>
 </html>
