--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="images/icon.gif">
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
-    <h1>Pardon our dust! This website is still a work in progress.</h1>
+  <body class="light-grey">
+    <h1>My Website</h1> 
   </body>
 </html>
