add "pardon our dust" message

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   </head>
   <body class="light-grey">
     <h1>My Website</h1> 
+    <p>Pardon our dust! This website is a work in progress.</p>
   </body>
 </html>
